# climate-action-hiwalk

./: .coverage  .dockerignore  .env.base_template  .env.ors_template  .env.s3_template  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.md  environment.yaml  environment_deploy.yaml  pyproject.toml
.gitlab/: renovate.json
.gitlab/issue_templates/: Default.md
doc/: environment_variables.md
plugin/: operator.py  plugin.py
plugin_blueprint/: input.py  operator_worker.py  plugin.py
resources/: blueprint.txt  example.bib  icon_source.md  ohsome.geojson  test_segmentation.tiff
resources/components/categorise_paths/: path_categorisation_caption.md  path_categorisation_description.md  smoothness_caption.md  smoothness_description.md  surface_caption.md  surface_description.md  surface_quality_caption.md  surface_quality_description.md  value_ranking.yaml
resources/components/naturalness/: caption.md  description.md
resources/components/path_lighting/: path_lighting_description.md
resources/components/shade/: description.md
resources/components/slope/: caption.md  description.md
resources/info/: methodology.md  methodology_shade.md  purpose.md  sources.bib
resources/info/connectivity/: caption.md  description.md
resources/info/path_categories/: caption.md
resources/info/permeability/: caption.md
resources/info/surface_quality/: caption.md
resources/pavement_quality/: value_ranking.yaml
resources/test/: ohsome.geojson  ohsome_line_and_polygon_response.geojson  ohsome_line_response.geojson  ohsome_polygon_response.geojson
test/: conftest.py  test_artifact.py  test_operator_worker.py  test_plugin.py  test_utils.py  test_utils.test_construct_filter_verify_exlusive.approved.txt  test_utils.test_construct_filter_verify_explicit.approved.txt  test_utils.test_construct_filter_verify_inaccessible.approved.txt  test_utils.test_construct_filter_verify_potential_but_unknown.approved.txt  test_utils.test_construct_filter_verify_probable_yes.approved.txt  test_utils.test_ohsome_filter.line.approved.txt  test_utils.test_ohsome_filter.polygon.approved.txt  test_utils.test_ohsome_filter.relation.approved.txt  test_utils.test_pavement_quality_info_generator.approved.txt
test/components/benches_and_drinking_water/: test_benches_and_drinking_water.py  test_benches_and_drinking_water.test_get_pois_empty_request.approved.txt  test_wellness_artifacts.py
test/components/categorise_paths/: approvaltests_config.json  test_PathCategoryFilters.py  test_categorise_paths_artifacts.py  test_path_categorisation.py  test_path_category_filters.py  test_path_summarisation.py
test/components/comfort/: test_benches_and_drinking_water.py  test_benches_and_drinking_water.test_request_drinking_water.approved.txt  test_comfort_artifacts.py  test_comfort_poi_filters.py  test_comfort_poi_filters.test_distance_enrich_paths_empty_request.approved.txt  test_comfort_poi_filters.test_real_isochrones_one_bin_failure.approved.txt  test_comfort_poi_filters.test_request_benches.approved.txt  test_comfort_poi_filters.test_request_sheltered_benches.approved.txt  test_comfort_poi_filters.test_request_toilets.approved.txt
test/components/naturalness/: test_naturalness_analysis.py
test/components/network_analyses/: test_detour_analysis.py  test_detour_analysis.test_get_ors_walking_distances.approved.txt  test_detour_analysis.test_get_ors_walking_distances_breaking_route.approved.txt  test_detour_artifact.py  test_hexgrid_analysis.py  test_network_analyses.py  test_ors_request  test_snapping_request_fail_bad_gateway  test_snapping_request_fail_forbidden
test/components/path_lighting/: test_path_lighting_analysis.py  test_path_lighting_artifact.py
test/components/shade/: test_shade_analysis.py  test_utility.py
test/components/slope/: test_slope.py  test_slope_analysis.py  test_slope_artifacts.py
test/components/utils/: test_geometry.py  test_misc.py
test/core/: test_input.py  test_operator_worker.py
test/resources/: mock_shade_tiles.geojson  mock_tree_raster1.tif  mock_tree_raster2.tif  mock_tree_raster2.tif.msk  ohsome_admin_response.geojson  ohsome_admin_response_no_name.geojson  ohsome_benches.geojson  ohsome_boundaries_mixed_geometries.geojson  ohsome_categorisation_response.geojson  ohsome_count_response.json  ohsome_drinking_water.geojson  ohsome_erroneous_clipping.geojson  ohsome_route_response.geojson  ohsome_sheltered_benches.geojson  ohsome_toilets.geojson  ors_isochrones.geojson  snap_batched_records.json  test_real_isochrones.json
test/resources/approved_files/: test_categorise_paths_artifacts.test_pavement_quality_info_generator.approved.txt
test/resources/shade/: mock_shade_tiles.geojson  mock_tree_raster1.tif  mock_tree_raster2.tif  mock_tree_raster2.tif.msk
walkability/: artifact.py  input.py  operator_worker.py  plugin.py  utils.py
walkability/components/categorise_paths/: PathCategoryFilters.py  path_categorisation.py  path_categorisation_artifacts.py  path_category_filters.py  path_summarisation.py
walkability/components/comfort/: comfort_artifacts.py  (+2 more)
walkability/core/: info.py  input.py  operator_worker.py  settings.py
(+29 files in other folders)
