[tool.poetry]
name = "walkability"
version = "1.1.0"
description = "The Walkability plugin"
authors = ["Moritz Schott <moritz.schott@heigit.org>", "Maciej Adamiak <maciej.adamiak@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = { git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.1.2" }
pydantic = "2.8.2"
pydantic-settings = "^2.1.0"
geojson-pydantic = "^1.0.1"
shapely = "^2.0.2"
pyyaml = "^6.0.1"
ohsome = "^0.4.0"
matplotlib = "^3.8.3"
networkx = "^3.3"
momepy = "^0.7.0"
geonetworkx = "^0.5.3"
osmnx = "^2.0.0"
pytest = "^8.3.4"
openrouteservice = "^2.3.3"


[tool.poetry.group.test.dependencies]
approvaltests = "^12.2.0"
pytest-approvaltests = "^0.2.4"
responses = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--approvaltests-use-reporter='PythonNativeReporter'"
markers = ["slow: marks tests as slow (skip with '--skip-slow' option)"]