[tool.poetry]
name = "walkability"
version = "2.1.1"
description = "The Walkability plugin"
authors = ["Moritz Schott <moritz.schott@heigit.org>", "Maciej Adamiak <maciej.adamiak@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = { git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.3" }
pydantic = "2.11.7"
pydantic-settings = "^2.1.0"
shapely = "^2.0.2"
pyyaml = "^6.0.1"
ohsome = "^0.4.0"
matplotlib = "^3.8.3"
pytest = "^8.3.4"
openrouteservice = "^2.3.3"
h3pandas = "^0.3.0"
requests-ratelimiter = "^0.7.0"


[tool.poetry.group.test.dependencies]
approvaltests = "^12.2.0"
pytest-approvaltests = "^0.2.4"
responses = "^0.25.0"
pytest-cov = "^6.1.1"
vcrpy = {version = "^7.0.0", markers = "platform_python_implementation !='PyPy'"}  # https://github.com/kevin1024/vcrpy/issues/880


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*" , "walkability/core/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--approvaltests-use-reporter='PythonNativeReporter'"
markers = ["slow: marks tests as slow (skip with '--skip-slow' option)"]
