[project]
name = "walkability"
version = "3.0.3"
description = "The Walkability plugin"
authors = [{name="Moritz Schott", email="moritz.schott@heigit.org"}, {name="Maciej Adamiak", email="maciej.adamiak@heigit.org"}, {name="Emily C. Wilke", email="emily.wilke@heigit.org"}]
readme = "README.md"

requires-python = ">=3.13.5,<3.14"
dependencies = [
    "climatoology @ git+https://gitlab.heigit.org/climate-action/climatoology.git@7.0.2",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "shapely (>=2.0.2,<3.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "ohsome (>=0.4.0,<1.0.0)",
    "matplotlib (>=3.8.3,<4.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "openrouteservice (>=2.3.3,<3.0.0)",
    "h3pandas (>=0.3.0,<1.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "mobility-tools @ git+https://gitlab.heigit.org/climate-action/utilities/mobility-tools.git@1.0.3",
]

[project.urls]
repository = "https://gitlab.heigit.org/climate-action/plugins/bikeability"

[tool.poetry.group.test.dependencies]
approvaltests = "^16.0.0"
pytest-approvaltests = "^0.2.4"
responses = "^0.25.0"
pytest-cov = "^7.0.0"
vcrpy = {version = "^8.0.0", markers = "platform_python_implementation !='PyPy'"}  # https://github.com/kevin1024/vcrpy/issues/880


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pandas-stubs = "^2.3.0.250703"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*" , "walkability/core/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--approvaltests-use-reporter='PythonNativeReporter'"
markers = ["slow: marks tests as slow (skip with '--skip-slow' option)"]
